# terraform-tui

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  reset.sh  run.sh
.github/workflows/: cleanup.yaml  publish-pypi.yaml  publish-test-pypi.yaml
app/: main.py
demo/: tftui.cast
src/tftui/: __main__.py  apis.py  state.py  ui.css
test/: .terraform.lock.hcl  local_file_#2.txt  local_file_#3.txt  main.tf  run.sh  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars
test/aws/: ami.tf  aws.tf  igw.tf  my-eip.tf  my-privrtassociation.tf  my-pubrtassociation.tf  my_instance.tf  mysg.tf  mysgingress-80.tf  mysgingress-icmp.tf  mysgrule-egress-all.tf  nat_gateway.tf  rtb1-natgw-tgw.tf  rtb2-igw.tf  subnets.tf  user_data.sh  variables.tf  vpc.tf
test/module/: main.tf
test/module2/: main.tf
test/module3/: main.tf
tftui/: __main__.py  apis.py  constants.py  debug_log.py  modal.py  plan.py  state.py  ui.css  ui.tcss
