[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tftui"
version = "0.12.4"
description = "Terraform Textual User Interface"
authors = ["Ido Avraham"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/idoavrah/terraform-tui"
keywords = ["terraform", "tui"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
packages = [
    { include = "tftui" },
]
include = ["tftui/ui.tcss"]

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.44.1"
posthog = "^3.1.0"
requests = "^2.31.0"
pyperclip = "^1.8.2"

[tool.poetry.scripts]
tftui = 'tftui.__main__:main'

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
